[package]
name = "moon_query"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Query language for moon (MQL)."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"

[dependencies]
moon_common = { version = "0.1.0", path = "../common" }
moon_config = { version = "0.1.0", path = "../config" }
miette = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
